fixed the closed button position on mobile

--- a/style.css
+++ b/style.css
@@ -366,6 +366,11 @@ select:focus {
         width: 95%;
     }
 
+    /* .close {
+        margin-right: 0px;
+        background-color: red;
+    } */
+
 }
 
 @media screen and (max-wdith: 580px) {}
